--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <img src="./assets/mewtwo-pic.jpg" alt="image pokémon mewtwo" class="poke-pic">
                 <p class="under-pic-info">n°0150 Pokémon Génétique Taille : 2,0m Poids : 122,0kg</p>
 
+                <p class="attack-one"><img src="./assets/psy-energy.png" alt="psy energy" class="energy-ball"><img src="./assets/colorless-energy.png" alt="colorless energy" class="energy-ball">Psychic Sphere</p>
+
             </article>
         </div>
 
