--- a/index.html
+++ b/index.html
@@ -23,7 +23,25 @@
                 <img src="./assets/mewtwo-pic.jpg" alt="image pokémon mewtwo" class="poke-pic">
                 <p class="under-pic-info">n°0150 Pokémon Génétique Taille : 2,0m Poids : 122,0kg</p>
 
-                <p class="attack-one"><img src="./assets/psy-energy.png" alt="psy energy" class="energy-ball"><img src="./assets/colorless-energy.png" alt="colorless energy" class="energy-ball">Psychic Sphere</p>
+                <div class="attack-poke">
+                    <div class="energy-balls-attack">
+                        <img src="./assets/psy-energy.png" alt="psy energy" class="energy-ball">
+                        <img src="./assets/colorless-energy.png" alt="colorless energy" class="colorless-energy-ball">
+                    </div>
+                    <p class="name-attack">Sphère Psy</p>
+                    <p class="damage-attack">50</p>
+                </div>
+
+                <div class="attack-poke">
+                    <div class="energy-balls-attack">
+                        <img src="./assets/psy-energy.png" alt="psy energy" class="energy-ball">
+                        <img src="./assets/psy-energy.png" alt="psy energy" class="energy-ball">
+                        <img src="./assets/colorless-energy.png" alt="colorless energy" class="colorless-energy-ball">
+                        <img src="./assets/colorless-energy.png" alt="colorless energy" class="colorless-energy-ball">
+                    </div>
+                    <p class="name-attack">Psykoforce</p>
+                    <p class="damage-attack">150</p>
+                </div>
 
             </article>
         </div>
