--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 
                 <div class="poke-name-and-pv-number">
                     <div class="title-pokemon">
-                        <p class="base-bloc">Base</p></p><p class="poke-name">Mewtwo<span class="ex-letters">EX</span></p>
+                        <p class="base-bloc">Basic</p></p><p class="poke-name">Mewtwo<span class="ex-letters">EX</span></p>
                     </div>
-                    <p class="pv-number">pv170<img src="./assets/psy-energy.png" class="energy-ball"></p>
+                    <p class="pv-number">pv150<img src="./assets/psy-energy.png" class="energy-ball"></p>
                 </div>
 
                 <img src="./assets/mewtwo-pic.jpg" alt="image pokémon mewtwo" class="poke-pic">
-                <p class="under-pic-info">n°0150 Pokémon Génétique Taille : 2,0m Poids : 122,0kg</p>
+                <p class="under-pic-info">n°0150 Genetic Pokémon Height : 2,0m Weight : 122,0kg</p>
 
                 <div class="attack-poke">
                     <div class="energy-balls-attack">
                         <img src="./assets/psy-energy.png" alt="psy energy" class="energy-ball">
-                        <img src="./assets/colorless-energy.png" alt="colorless energy" class="colorless-energy-ball">
+                        <img src="./assets/colorless-energy.png" alt="colorless energy" class="energy-ball">
                     </div>
-                    <p class="name-attack">Sphère Psy</p>
+                    <p class="name-attack">Psychic Sphere</p>
                     <p class="damage-attack">50</p>
                 </div>
 
@@ -36,12 +36,48 @@
                     <div class="energy-balls-attack">
                         <img src="./assets/psy-energy.png" alt="psy energy" class="energy-ball">
                         <img src="./assets/psy-energy.png" alt="psy energy" class="energy-ball">
-                        <img src="./assets/colorless-energy.png" alt="colorless energy" class="colorless-energy-ball">
-                        <img src="./assets/colorless-energy.png" alt="colorless energy" class="colorless-energy-ball">
+                        <img src="./assets/colorless-energy.png" alt="colorless energy" class="energy-ball">
+                        <img src="./assets/colorless-energy.png" alt="colorless energy" class="energy-ball">
                     </div>
-                    <p class="name-attack">Psykoforce</p>
+                    <p class="name-attack">Psydrive</p>
                     <p class="damage-attack">150</p>
                 </div>
+                <p class="attack-info">Discard 2 <img src="./assets/psy-energy.png" class="small-energy-ball">energy from this Pokémon</p>
+
+                <div class="weakness-and-retire-infos">
+                    
+                    <div class="additionnal-info">
+                        <p class="info-weakness">weakness<img src="./assets/dark-energy.png" class="small-energy-ball">x2</p>
+                    </div>
+
+                    <div class="additionnal-info">
+                        <p class="info-retire">retreat<img src="./assets/colorless-energy.png" class="small-energy-ball"><img src="./assets/colorless-energy.png" class="small-energy-ball"></p>
+                    </div>
+
+                </div>
+
+                <div class="bottom-card-infos">
+
+                    <div class="rarity-and-author">
+
+                        <p class="author-card">Illus. PLANETA Mochizuki</p>
+
+                        <div class="rarity-card">
+                            <img src="./assets/diament.png" class="diamond-logo">
+                            <img src="./assets/diament.png" class="diamond-logo">
+                            <img src="./assets/diament.png" class="diamond-logo">
+                            <img src="./assets/diament.png" class="diamond-logo">
+                        </div>
+
+                    </div>
+
+                    <div class="ex-rule">
+                        <p class="ex-rule-title">EXrule</p>
+                        <p class="ex-rule-text-content">When your Pokémon EX is Knocked Out, your opponent gets 2 points</p>
+                    </div>
+
+                </div>
+
 
             </article>
         </div>
